--- a/src/server/Themes/default/theme.cfg
+++ b/src/server/Themes/default/theme.cfg
@@ -4,6 +4,15 @@
 screensaver.wait	180
 windows.drag-color	#FFEF00
 
+# Starting from Glassomium 0.3, the physics engine can be turned on
+physics.enabled			yes
+
+# How much friction should be applied to windows when released from a drag
+physics.drag-friction		0.3
+
+# How much should windows bounce off from the corners of the screen
+physics.drag-restitution	0.3
+
 [BottomMenu]
 window.type				"foreground"
 window.URL				"/system/launcher"
